--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "web3": "^1.4.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.2.0"
+    "@chainlink/contracts": "^0.2.2",
+    "@openzeppelin/contracts": "^4.2.0",
+    "dotenv": "^10.0.0"
   }
 }
